--- a/views/products/gunmetal.ejs
+++ b/views/products/gunmetal.ejs
@@ -8,7 +8,7 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <title>Gunmetal Products</title>
 </head>
-<body id='gunmetal-page'>
+<body id='item-page'>
   <div id='nav' class='navbar-fixed'>
     <nav>
       <div class='nav-wrapper'>
