--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -46,7 +46,7 @@
       <div id='bottom-options'>
         <div id='rsg'>
           <img id='meg' src='images/megRsg.jpeg'>
-          <a id='rsgOption' href='/rosegold'> Rose Gold Options </a><br>
+          <a id='rsgOption' href='/rsg'> Rose Gold Options </a><br>
         </div>
         <div id='colorful'>
           <img id='me' src='images/colorful.png'>
