--- a/views/products/rings.ejs
+++ b/views/products/rings.ejs
@@ -8,15 +8,15 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <title>Necklace Products</title>
 </head>
-<body id='necklace-page'>
+<body id='item-page'>
   <div id='nav' class='navbar-fixed'>
     <nav>
       <div class='nav-wrapper'>
         <a id='opt' href='/necklaces'> Necklaces </a><br>
-          <a id='opt' href='/bracelets'> Bracelets </a><br>
-          <a id='opt' href='/earrings'> Earrings </a><br>
-          <a id='opt' href='/products/show'> All Products </a>
-          <a id='cart' href='/products/orders'> View Cart </a>
+        <a id='opt' href='/earrings'> Earrings </a><br>
+        <a id='opt' href='/bracelets'> Bracelets </a><br>
+        <a id='opt' href='/products/show'> All Products </a>
+        <a id='cart' href='/products/orders'> View Cart </a>
       </div>
     </nav>
   </div>
