--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -128,7 +128,7 @@ grid-row: 2/3;
   height: 200%;
 }
 
-#necklaces, #bracelets, #earrings, #rings, #opt {
+#necklaces, #bracelets, #earrings, #rings, #opt, #option {
   background: white;
   width: 15%;
   align-items: center;
@@ -151,7 +151,7 @@ grid-row: 2/3;
 }
 
 /* views/products/show */
-#all-products-page, #gunmetal-page {
+#all-products-page, #item-page {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 5fr 5fr 3fr;
@@ -222,7 +222,7 @@ h3 {
 }
 
 #footer-show {
-  grid-row: 7/8;
+  grid-row: 10/11;
   grid-column: 1/3;
   background: url('/images/ksfooter.jpeg') center;
   height: 200%;
