--- a/views/products/gold.ejs
+++ b/views/products/gold.ejs
@@ -8,18 +8,27 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <title>Gold Products</title>
 </head>
-<body id='gold-page'>
+<body id='item-page'>
   <div id='nav' class='navbar-fixed'>
     <nav>
       <div class='nav-wrapper'>
-        <a id='opt' href='/gunmetal'> Gunmetal </a><br>
         <a id='opt' href='/silver'> Silver </a><br>
         <a id='opt' href='/rsg'> Rose Gold </a><br>
+        <a id='opt' href='/gunmetal'> Gunmetal </a><br>
         <a id='opt' href='/colorful'> Colorful </a><br>
         <a id='opt' href='/products/show'> All Products </a><br>
         <a id='cart' href='/products/orders'> View Cart </a><br>
       </div>
     </nav>
+  </div>
+  <div>
+    <img id='Img' src='/images/gold/gld-atticus.png'>
+    <form action='/products/addToCart' method='POST'>
+      <input type='hidden' name="item" value='Atticus Earrings in Gold'>
+      <input type='hidden' name="price" value='$20'>
+      <p id='detail'>Name: Atticus<br>Style: Earrings<br>Metal: Gold<br>Season: Winter 2017<br>Price: $20</p>
+      <input type='submit' value='Add To Cart'>
+    </form>
   </div>
   <div>
     <img id='Img' src='/images/gold/gld-brett.png'>
