--- a/views/products/rsg.ejs
+++ b/views/products/rsg.ejs
@@ -8,13 +8,13 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <title>Gold Products</title>
 </head>
-<body id='gold-page'>
+<body id='item-page'>
   <div id='nav' class='navbar-fixed'>
     <nav>
       <div class='nav-wrapper'>
-        <a id='opt' href='/gunmetal'> Gunmetal </a><br>
         <a id='opt' href='/gold'> Gold </a><br>
         <a id='opt' href='/silver'> Silver </a><br>
+        <a id='opt' href='/gunmetal'> Gunmetal </a><br>
         <a id='opt' href='/colorful'> Colorful </a><br>
         <a id='opt' href='/products/show'> All Products </a><br>
         <a id='cart' href='/products/orders'> View Cart </a><br>
@@ -31,11 +31,11 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-joel.png'>
-    <form action='/products/addToCart' method='POST'>
-      <input type='hidden' name="item" value='Joel Ring in Rose Gold'>
-      <input type='hidden' name="price" value='$5'>
-      <p id='detail'>Name: Joel<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $5</p>
+    <img id='Img' src='/images/rsg/rsg-corza.png'>
+    <form action='/products/AddToCart' method='POST'>
+      <input type='hidden' name="item" value='Corza Earrings in Rose Gold'>
+      <input type='hidden' name="price" value='$30'>
+      <p id='detail'>Name: Corza<br>Style: Earrings<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $30</p>
       <input type='submit' value='Add To Cart'>
     </form>
   </div>
@@ -45,6 +45,15 @@
       <input type='hidden' name="item" value='Pryde Ring in Rose Gold'>
       <input type='hidden' name="price" value='$15'>
       <p id='detail'>Name: Pryde<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $15</p>
+      <input type='submit' value='Add To Cart'>
+    </form>
+  </div>
+  <div>
+    <img id='Img' src='/images/rsg/rsg-joel.png'>
+    <form action='/products/addToCart' method='POST'>
+      <input type='hidden' name="item" value='Joel Ring in Rose Gold'>
+      <input type='hidden' name="price" value='$5'>
+      <p id='detail'>Name: Joel<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $5</p>
       <input type='submit' value='Add To Cart'>
     </form>
   </div>
